Fix alignment of flair tiles

--- a/styles/all/theme/flair.css
+++ b/styles/all/theme/flair.css
@@ -64,6 +64,7 @@
 	padding: 4px;
 	position: relative;
 	vertical-align: top;
+	width: 100%;
 }
 
 .flair-tile .flair-buttons {
